--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
-    "prisma": "^6.19.2",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -33,8 +32,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@prisma/adapter-libsql": "^7.4.0",
-    "@prisma/client": "6",
+    "@prisma/adapter-libsql": "^6.19.2",
+    "@prisma/client": "^6.19.2",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
@@ -43,6 +42,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^6.19.2",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
