--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.0",
+    "@prisma/config": "^7.4.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,8 +31,7 @@
     "react-dropzone": "^15.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
-    "zod": "^3.24.1",
-    "@prisma/client": "^7.4.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@prisma/adapter-libsql": "^6.19.2",
@@ -40,6 +41,7 @@
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "prisma": "^7.4.0",
