--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@prisma/config": "^7.4.0",
     "bcryptjs": "^3.0.3",
@@ -25,6 +26,7 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
+    "pg": "^8.18.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -39,6 +41,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/papaparse": "^5.5.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.3.1",
