chore: add keywords to package metadata

--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
   "name": "ramadan-clock",
   "version": "0.1.0",
   "private": true,
+  "keywords": [
+    "ramadan",
+    "prayer-times",
+    "islamic-calendar",
+    "sehar",
+    "iftar",
+    "nextjs",
+    "typescript",
+    "prisma",
+    "postgresql",
+    "authentication",
+    "admin-dashboard",
+    "hadith",
+    "pdf-generation",
+    "file-upload",
+    "shadcn-ui",
+    "tailwindcss"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
