--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.574.0",
+    "moment": "^2.30.1",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -57,6 +58,7 @@
     "@prisma/adapter-libsql": "^6.19.2",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20",
     "@types/papaparse": "^5.5.2",
     "@types/pg": "^8.16.0",
