--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.574.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
