--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   ],
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "rm -rf .next && next dev",
+    "clean": "rm -rf .next",
+    "clean:all": "./scripts/clear-cache.sh",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
